--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -136,7 +136,6 @@ code: |
   if has_existing_support_order and not agreed_on_who_pays:
     if not have_circumstances_changed:
       circumstances_kickout
-    circumstance_changes
 
   nav.set_section("review_support_requested")
   support_formula_fyi
@@ -184,6 +183,12 @@ code: |
     paid_child_care
     paid_medical_costs
   set_all_existing_support = True
+---
+code: |
+  if has_existing_support_order and not agreed_on_who_pays:
+    if not have_circumstances_changed:
+      circumstances_kickout
+  kick_out_check = True
 ---
 code: |
   if base_support_matches_calc == "unable_to_use_mi_calc":
@@ -248,7 +253,7 @@ subquestion: |
   You said you already do not have an existing Michigan divorce, separate maintenance, paternity, custody, or family support case.
   You must have one to continue to use this tool.
   
-  If you made a mistake, click the **< ${ MLH_back_button_label }** button to change your answer. Otherwise, you can return to [Michigan Legal Help](https://michiganlegalhelp.org) for other legal information or resources.
+  If you made a mistake, click the **${ MLH_back_button_label }** button to change your answer. Otherwise, you can return to [Michigan Legal Help](https://michiganlegalhelp.org) for other legal information or resources.
 ---
 id: what_you_will_need
 question: |
@@ -354,7 +359,7 @@ question: |
 subquestion: |
   This tool may only be used to prepare a Motion Regarding Support in an existing Michigan family court case between two parents, with no third-party involvement.
 
-  If you made a mistake, click the **< ${ MLH_back_button_label }** button to change your answer. Otherwise, you can return to [Michigan Legal Help](https://michiganlegalhelp.org) for other legal information or resources.
+  If you made a mistake, click the **${ MLH_back_button_label }** button to change your answer. Otherwise, you can return to [Michigan Legal Help](https://michiganlegalhelp.org) for other legal information or resources.
 ---
 id: what is the user's role?
 question: |
@@ -508,11 +513,15 @@ fields:
 depends on:
   - who_paid
   - user_started_case
+  - has_existing_support_order
 code: |
-  if (who_paid == "user" and user_started_case) or (who_paid == "other_party" and not user_started_case):
-    which_side_paid = "plaintiff" 
+  if has_existing_support_order:
+    if (who_paid == "user" and user_started_case) or (who_paid == "other_party" and not user_started_case):
+      which_side_paid = "plaintiff" 
+    else:
+      which_side_paid = "defendant"
   else:
-    which_side_paid = "defendant"
+    which_side_paid = ""
 ---
 id: subtotal amount
 question: |
@@ -724,6 +733,15 @@ subquestion: |
 fields:
   - Have circumstances changed?: have_circumstances_changed
     datatype: yesnoradio
+  - How have your circumstances changed?: circumstance_changes
+    label above field: True
+    input type: area
+    show if: have_circumstances_changed
+  - note: |
+      Explain in detail, and use complete sentences.
+
+      Your answer will be attached to your *Motion Regarding Support*. It will help the court decide whether child support should be changed at this time.
+    show if: have_circumstances_changed
 ---
 template: circumstance_examples
 subject: What are some examples of changes in circumstances?
@@ -734,29 +752,15 @@ content: |
   * A parent's ability to earn money has changed; or
   * There has been a change in health care coverage.
 ---
-id: circumstance_changes
-question: |
-  How have your circumstances changed?
-subquestion: |
-  Explain in detail, and use complete sentences.
-
-  Your answer will be attached to your *Motion Regarding Support*.
-  It will help the court decide whether child support should be changed at this time.
-
-  ${ collapse_template(circumstance_examples) }
-fields:
-  - no label: circumstance_changes
-    input type: area
----
 # TODO(brycew): Move this earlier in the interview?
 id: circumstances_kickout
 event: circumstances_kickout
 question: |
   You cannot use this tool to prepare a Motion Regarding Support
 subquestion: |
-  Michigan law requires a change in circumstances for the court to change a child support order.
+  Michigan law requires either an **agreement** or a **change in circumstances** for the court to change a child support order.
 
-  If you made a mistake, click the **< ${ MLH_back_button_label }** button to change your answer. Otherwise, you can return to [Michigan Legal Help](https://michiganlegalhelp.org) for other legal information or resources.
+  If you made a mistake, click the **${ MLH_back_button_label }** button to change your answer. Otherwise, you can return to [Michigan Legal Help](https://michiganlegalhelp.org) for other legal information or resources.
 ---
 # TODO(brycew): copied from LHI, adjust text to what's actually in our form
 id: efile note question
@@ -936,9 +940,13 @@ objects:
 code: |
   if base_support_matches_calc == "unable_to_use_mi_calc":
     mrcs_foc10.enabled = False
-    mrcs_attachment_addendum.enabled = False
   else:
     mrcs_foc10.enabled = True
+---
+code: |
+  if base_support_matches_calc == "unable_to_use_mi_calc" and not have_circumstances_changed:
+    mrcs_attachment_addendum.enabled = False
+  else:
     mrcs_attachment_addendum.enabled = True
 ---
 code: |
@@ -956,6 +964,7 @@ code: |
 attachment:
   variable name: mrcs_attachment_addendum[i]
   docx template file: Motion Regarding Support Addendum.docx
+  skip undefined: True
 ---
 code: |
   # TODO(brycew): we don't really need to treat the addendum like an addendum?
